--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div id="start-screen">
         <h1 style="color:#f1c40f; font-size: 1.4rem;">مسابقة الداعي الكبرى</h1>
-        <p style="color:#aaa; font-size: 0.8rem; margin-bottom: 20px;">تحدي الـ 45 سؤالاً دينيًا</p>
+        <p style="color:#aaa; font-size: 0.8rem; margin-bottom: 20px;"> تحدي الـ 45 سؤالاً دينيًا في هدا التحدي الديني يرجى رفع الالوان المناسبة لكل  سؤال</p>
         <button id="start-btn" onclick="initGame()">ابدأ المسابقة</button>
     </div>
 
