--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -45,7 +44,7 @@
 <div id="login-overlay">
     <h1 style="color:var(--primary); font-size:2rem;">مرحباً بك</h1>
     <p style="color:#64748b; margin-bottom:20px;">سجل الدخول بحساب جوجل للوصول إلى المكتبة والمسابقات</p>
-    <div id="g_id_onload" data-client_id="YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com" data-callback="handleSignIn"></div>
+    <div id="g_id_onload" data-client_id="295699802302-t4l7rov5vo93g20fuphhbh4sj21dbgu1.apps.googleusercontent.com" data-callback="handleSignIn"></div>
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="filled_blue"></div>
 </div>
 
